# im-crashing

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
src/: app.rs  main.rs  rime.rs
