[package]
name = "im-crashing"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.186"
rustix = "1.1.4"
wayland-client = "0.31.14"
wayland-protocols-misc =  { version = "0.3.12", features = [ "client" ] }
xkbcommon = "0.9.0"

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.33"
